--- a/qualifications.css
+++ b/qualifications.css
@@ -63,6 +63,18 @@ a:hover {
     color: black;
 }
 
+.mainl {
+    text-shadow: none;
+}
+
+.mainl:link {
+    color: black;
+}
+
+.mainl:visited {
+    color: black;
+}
+
 /* Main */
 
 main {
